[package]
name = "poligen_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = { version = "0.8.2", features = ["v4_12"] }
reqwest = "0.12.5"
lazy_static = "1.5.0"
bytes = "1.6.0"
anyhow = "1.0.86"
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
async-channel = "2.3.1"
tap = "1.0"